--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,9 @@
 spring:
   application:
     name: finance
+
+  datasource:
+    url: jdbc:mysql://localhost:3306/finance
+    username: root
+    password: 123
+    driver-class-name: com.mysql.cj.jdbc.Driver
