--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,3 +7,9 @@ spring:
     username: root
     password: 123
     driver-class-name: com.mysql.cj.jdbc.Driver
+
+    flyway:
+      enabled: true
+      baseline-on-migrate: true
+      baseline-version: 2
+      repair-on-migrate: true
