--- a/pom.xml
+++ b/pom.xml
@@ -121,7 +121,10 @@
             <artifactId>opencsv</artifactId>
             <version>5.12.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-xml</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
