feat(Bacen scrapper): add Bacen resumo scrapper service and controller

--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,13 @@
             <groupId>com.fasterxml.jackson.dataformat</groupId>
             <artifactId>jackson-dataformat-xml</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.microsoft.playwright</groupId>
+            <artifactId>playwright</artifactId>
+            <version>1.41.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
