--- a/Bruno/Finance/Holiday/Lista Feriados em um Período.yml
+++ b/Bruno/Finance/Holiday/Lista Feriados em um Período.yml
@@ -5,16 +5,14 @@ info:
 
 http:
   method: GET
-  url: "{{LOCALHOST}}/finance/v1/routines/holidays"
+  url: "{{LOCALHOST}}/finance/v1/routines/holidays?startDate=2005-01-01&endDate=2005-12-31"
   params:
     - name: startDate
-      value: ""
+      value: 2005-01-01
       type: query
-      disabled: true
     - name: endDate
-      value: ""
+      value: 2005-12-31
       type: query
-      disabled: true
   auth: inherit
 
 settings:
