Persist source files with checksum & errors

--- a/Bruno/Finance/Holiday/Lista Feriados em um Período.yml
+++ b/Bruno/Finance/Holiday/Lista Feriados em um Período.yml
@@ -5,13 +5,16 @@ info:
 
 http:
   method: GET
-  url: "{{LOCALHOST}}/finance/v1/routines/holidays?startDate=2005-01-01&endDate=2005-12-31"
+  url: "{{LOCALHOST}}/finance/v1/routines/holidays?startDate=2005-01-01&endDate=2005-12-31&size=5"
   params:
     - name: startDate
       value: 2005-01-01
       type: query
     - name: endDate
       value: 2005-12-31
+      type: query
+    - name: size
+      value: "5"
       type: query
   auth: inherit
 
