--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,13 @@
             <version>1.41.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.instancio</groupId>
+            <artifactId>instancio-junit</artifactId>
+            <version>5.3.0</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
