--- a/Bruno/Finance/User/Todos os Usuários.yml
+++ b/Bruno/Finance/User/Todos os Usuários.yml
@@ -1,11 +1,11 @@
 info:
-  name: /user_1
+  name: Todos os Usuários
   type: http
   seq: 5
 
 http:
   method: GET
-  url: "{{localhost}}/v1/finance/user"
+  url: "{{LOCALHOST}}/v1/finance/user"
   headers:
     - name: User-Agent
       value: insomnia/12.1.0
